--- a/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -38,6 +38,11 @@ jobs:
 
       - uses: actions/checkout@v3
 
+      - name: Set up Git
+        run: |
+          git config --global user.name "mygame"
+          git config --global user.email "xxxx@gmail.com"
+      
       - name: Modify values file
         shell: bash
         run: |
