--- a/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -27,7 +27,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: 4uganesh/${{values.app_name}}:${{ '${{ env.COMMIT_ID }}' }}
+          tags: ricardoandre9707/${{values.app_name}}:${{ '${{ env.COMMIT_ID }}' }}
     outputs:
       commit_id: ${{ '${{ env.COMMIT_ID }}' }}
 
@@ -38,12 +38,7 @@ jobs:
 
       - uses: actions/checkout@v3
 
-      - name: Set up Git
-        run: |
-          git config --global user.name "mygame"
-          git config --global user.email "xxxx@gmail.com"
-      
-     - name: Modify values file
+      - name: Modify values file
         shell: bash
         run: |
           echo ${{ '${{needs.ci.outputs.commit_id}}' }}
@@ -54,11 +49,6 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           message: 'Updates values.yaml with commit ${{ '${{needs.ci.outputs.commit_id}}' }}'
-          
-      # - name: Commit changes
-      #   uses: EndBug/add-and-commit@v9
-      #   with:
-      #     message: 'Updates values.yaml with commit ${{ '${{needs.ci.outputs.commit_id}}' }}'
 
       - name: Install argocd
         shell: bash
@@ -81,7 +71,7 @@ jobs:
         run: |
 
           # Connects the argocd repo
-          repo="https://github.com/4uganesh/${{values.app_name}}.git"
+          repo="https://github.com/ricardoandre-97/${{values.app_name}}.git"
           argocd repo list | grep -q $repo || argocd repo add $repo
 
           # Creates the argocd app
